# BuloCloudSentinel

./: .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  .ruff.toml  BANNER.md  DOCUMENTATION.md  Dockerfile  Dockerfile.node20  LICENSE.new  Makefile  README.backup.md  README.md  README.md.new  README.styled.md  RELEASE_GUIDE.md  Run-SecurityFixes.ps1  Run-SecurityWorkflows.bat  Run-SecurityWorkflows.ps1  SECURITY.md  SECURITY_FIXES.md  SECURITY_UPDATES.md  bandit-results.json  bulk_update_dependencies.py  docker-compose.node20.yml  docker-compose.yml  fetch_codeql_alerts.py  fix_cleartext_logging.py  fix_codeql_issues.py  fix_js_dependencies.js  fix_js_vulnerabilities.py  fix_path_injection.py  fix_remaining_codeql_issues.py  fix_security_issues.py  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-secure.txt  requirements-updated.txt  (+21 more)
.github/: dependabot.yml
ai/: cli.py
ai_analytics/: Dockerfile  README.md  docker-compose.yml  main.py  requirements.txt
ai_detection/: Dockerfile  ai_model_management.py  requirements.txt
anti_jamming_service/: Dockerfile  README.md  __init__.py  docker-compose.yml  main.py  requirements.txt
backend/: Dockerfile  README.md  main.py  requirements.txt
bulo-sentinel-ai/: Dockerfile  README.md  audit_log.py  claude_adapter.py  dalle_adapter.py  gemini_adapter.py  main.py  monitoring.py  openapi.yaml  requirements.txt  whisper_adapter.py
codeql_analysis/: codeql_alerts_20250523_182012.json  codeql_alerts_20250523_182854.json  codeql_categories_20250523_182012.json  codeql_summary_20250523_182012.md  codeql_summary_20250523_182854.md
common/: __init__.py  exceptions.py  logging.py  utils.py  validators.py
comms_fallback/: Dockerfile.test  README.md  __init__.py  docker-compose.test.yml  main.py  requirements.txt
counter_uas/: Dockerfile  README.md  __init__.py  docker-compose.yml  main.py  requirements.txt  setup.py
dock_driver/: Dockerfile  README.md  docker-compose.yml  main.py  requirements.txt
docker/: bulosentinel.Dockerfile
docs/: SECURITY.md  SECURITY_IMPROVEMENTS.md  ai_backends.md  autonomous_mission_planning.md  code_quality.md  dji_mission_planning.md  dji_sdk_integration.md  dock_stations.md  enhanced_inference.md  federated_learning.md  indoor_drone_features.md  lidar_visual_positioning.md  remote_id.md  secure_coding_guidelines.md  security_assessment_report.md  security_audit_results.md  security_champions_program.md  security_code_review_checklist.md  security_documentation_email.md  security_enhancements.md  security_features.md  security_guide.md  security_guidelines.md  security_incident_response_plan.md  security_review_schedule.md  security_training.md  security_update_report.md  security_vulnerability_fixes.md  simulation.md  vulnerability_remediation_plan.md  weather.md
drone_show_service/: .env.example  .gitignore  Dockerfile  LICENSE  MANIFEST.in  README.md  __init__.py  docker-compose.yml  generate_sample_data.py  init_db.py  mkdocs.yml  pytest.ini  requirements.txt  run.py  setup.py  start.bat  start.sh
drone_swarm_system/: README.md  main.py  requirements.txt
dronecore/: __init__.py  adapter_factory.py  ardupilot_adapter.py  betaflight_adapter.py  command_bridge.py  dji_adapter.py  dji_dock_integration.py  dji_simulator.py  drone_command_telemetry_hub.py  drone_mission_planner.py  drone_telemetry_service.py  failsafe_manager.py  flight_controller_adapter.py  fpv_video_stream.py  mavlink_client.py  mission_planner_service.py  px4_adapter.py  sitl_simulation_bridge.py
edge_kit/: README.md  README_edge.md  convert_quantize.py  docker-compose.yml  edge_install.sh
edge_kit/edge_agent/: Cargo.toml  Dockerfile
edge_kit/edge_agent/src/: config.rs  main.rs
edge_kit/edge_agent/src/api/: mod.rs  server.rs  state.rs
edge_kit/edge_agent/src/api/routes/: device.rs  docker.rs  health.rs  mod.rs  ota.rs  security.rs
examples/: benchmark_backends.py  dji_complex_mission.py  dji_sdk_demo.py  enhanced_inference_demo.py  tinygrad_demo.py
federated_learning/: README.md  docker-compose.yml  generate_certs.sh
frontend/: .eslintrc.js  Dockerfile  eslint.config.js  nginx.conf  package-lock.json  package.json
indoor_drone_system/: README.md  docker-compose.yml
mapping_service/: README.md  __init__.py  docker-compose.yml  main.py  requirements.txt  worker_main.py
model_hub_service/: Dockerfile  README.md  cli.py  docker-compose.yml  requirements.txt
remoteid_service/: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  requirements.txt  setup.py
rtmp_server/: Dockerfile  nginx.conf
scripts/: Run-DependencyUpdate.ps1  Run-SecurityReview.ps1  Run-SecurityScan.ps1  add_sri_hashes.py  analyze_vulnerabilities.py  dependency_scan.py  fetch_dependabot_alerts.py  fix_dependabot_vulnerabilities.py  install_hooks.py  monitor_security_reports.py  optimize_workflows.py  prepare_github_upload.py  run_security_improvements.py  run_security_updates.py  scheduled_security_scan.py  security_review.py  security_scan.py  setup_security_review_task.ps1  setup_security_scan_task.ps1  test_dependencies.py  (+9 more)
weather_guard/: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
weather_guard/examples/: __init__.py  indoor_fallback_integration.py  weather_guard_demo.py
weather_guard/frontend/: WeatherCard.jsx
weather_guard/grafana/: weather_dashboard.json
weather_guard/kubernetes/: deployment.yaml
weather_guard/tests/: __init__.py  test_open_meteo_client.py  test_weather_service.py
weather_guard/tests/services/: __init__.py  test_weather.py
weather_guard/weather_guard/: __init__.py  client.py  main.py
weather_guard/weather_guard/api/: __init__.py  router.py
weather_guard/weather_guard/api/endpoints/: __init__.py  alerts.py  weather.py
weather_guard/weather_guard/clients/: __init__.py  meteo_shield.py  open_meteo.py
weather_guard/weather_guard/core/: __init__.py  config.py
weather_guard/weather_guard/models/: __init__.py  weather.py
weather_guard/weather_guard/services/: __init__.py  alerts.py  cache.py  metrics.py  weather.py
(+1159 files in other folders)
