[tool.poetry]
name = "bulo-cloud-sentinel"
version = "0.1.0"
description = "BuloCloud Sentinel - Open-source surveillance platform"
authors = ["BuloCloud Team"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
typer = "0.9.0"
fastapi = "0.115.12"
uvicorn = {extras = ["standard"], version = "0.34.0"}
pydantic = "2.11.4"
email-validator = "2.1.1"
python-multipart = "0.0.21"
asgiref = "3.8.1"
sqlalchemy = "2.0.38"
alembic = "1.14.0"
peewee = "3.17.9"
peewee-migrate = "1.12.2"
psycopg2-binary = "2.9.9"
pgvector = "0.4.0"
pymysql = "1.1.1"
pymongo = "4.7.1"
redis = "5.0.4"
pyjwt = "2.8.0"
passlib = {extras = ["bcrypt"], version = "1.7.4"}
bcrypt = "4.3.0"
argon2-cffi = "23.1.0"
httpx = "0.27.0"
websockets = "12.0"
boto3 = "1.35.53"
cryptography = "46.0.0"
pyopenssl = "24.0.0"
certifi = "2024.10.5"
python-magic = "0.4.27"
python-dotenv = "1.0.1"
aiofiles = "23.2.1"
aiocache = "0.12.2"
apscheduler = "3.10.4"
loguru = "0.7.2"
restrictedpython = "8.0"
openai = "1.30.1"
anthropic = "0.23.0"
google-generativeai = "0.8.4"
tiktoken = "0.6.0"
langchain = "0.3.20"
langchain-community = "0.4.0"
transformers = "4.50.0"
sentence-transformers = "3.3.1"
accelerate = "0.30.1"
colbert-ai = "0.2.21"
einops = "0.8.1"
tinygrad = "0.9.0"
safetensors = "0.4.3"
torch = ">=2.1.0"
onnx = "1.17.0"
onnxruntime = "1.20.1"
tensorflow-lite = "2.15.0"
chromadb = "0.6.3"
pymilvus = "2.5.0"
qdrant-client = "1.12.0"
opensearch-py = "2.8.0"
elasticsearch = "8.17.1"
fake-useragent = "2.1.0"
playwright = "1.49.1"
ftfy = "6.2.3"
pypdf = "4.3.1"
fpdf2 = "2.8.2"
pymdown-extensions = "10.14.2"
docx2txt = "0.8"
python-pptx = "0.6.23"
python-docx = "1.1.0"
opencv-python = "4.10.0.84"
pillow = "11.2.2"
numpy = "1.26.4"
scipy = "1.13.1"
scikit-learn = "1.5.0"
matplotlib = "3.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "8.0.2"
pytest-cov = "4.1.0"
pytest-asyncio = "0.23.5"
black = "24.3.0"
isort = "5.13.2"
flake8 = "7.0.0"
mypy = "1.9.0"
bandit = "1.7.8"
safety = "3.0.1"
pre-commit = "3.7.0"
pylint = "3.1.0"
coverage = "7.5.3"
flake8-bugbear = "24.2.6"
ruff = "0.3.0"
types-requests = "2.31.0.20240706"
types-pyyaml = "6.0.12.20240311"
types-redis = "4.6.0.20240311"
types-setuptools = "69.2.0.20240714"
types-urllib3 = "1.26.25.14"
semgrep = "1.62.0"
dockerfile-lint = "0.3.5"
trivy = "0.49.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py312"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
addopts = "--cov=backend --cov-report=term-missing --cov-fail-under=90"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "B", "S", "I", "N", "C", "W", "UP", "ANN", "FBT", "A", "COM", "C4", "DTZ", "T10", "EM", "EXE", "ISC", "ICN", "G", "INP", "PIE", "T20", "PT", "Q", "RSE", "RET", "SLF", "SIM", "TID", "TCH", "ARG", "PTH", "ERA", "PD", "PGH", "PL", "TRY", "NPY", "RUF"]
ignore = ["ANN401"]
argon2-cffi==23.1.0  # For secure password hashing
pydantic==2.11.4  # For secure data validation
python-magic==0.4.27  # For secure file type detection
safety==2.3.5  # For dependency vulnerability scanning
bandit==1.7.7  # For security static analysis
cryptography==46.0.0  # Updated to latest version to fix CVE-2024-26130, CVE-2024-12797, CVE-2024-6119
pyopenssl==24.0.0  # Secure version
