[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "weather_guard"
version = "0.1.0"
description = "Weather awareness service for Bulo.Cloud Sentinel"
readme = "README.md"
authors = [
    {name = "Bulo.Cloud Sentinel Team"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "uvicorn>=0.34.0",
    "httpx>=0.27.0",
    "redis>=5.0.4",
    "pydantic>=2.11.4",
    "pydantic-settings>=2.0.3",
    "aiomqtt>=1.2.0",
    # "python-jose>=3.3.0",  # Removed due to vulnerabilities CVE-2024-33664 and CVE-2024-33663
    "pyjwt>=2.8.0",  # Using a secure version that doesn't have CVE-2024-53861
    "python-multipart>=0.0.21",  # Updated to latest version to fix CVE-2024-53981
    "prometheus-client>=0.17.0",
    "argon2-cffi>=23.1.0",  # For secure password hashing
    "python-magic>=0.4.27",  # For secure file type detection
    "cryptography>=46.0.0",  # Updated to latest version to fix CVE-2024-26130, CVE-2024-12797, CVE-2024-6119
    "pyopenssl>=24.0.0",  # Secure version
    "safety>=2.3.5",  # For dependency vulnerability scanning
    "bandit>=1.7.7",  # For security static analysis
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "black>=23.9.1",
    "isort>=5.12.0",
    "mypy>=1.5.1",
    "ruff>=0.0.290",
]

[tool.setuptools]
packages = ["weather_guard"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
